# teams-league-cloudrun-rust

./: .envrc  Cargo.toml  Dockerfile  README.md  deploy-cloud-run-rust-service.yaml
src/: domain.rs  main.rs  team_stats_bq_row_mapper.rs  utils.rs
src/domain/: team_stats_mapper.rs  team_stats_structs.rs
