[package]
name = "teams-league-cloudrun-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = "0.3.1"
google-cloud-bigquery = "0.5.0"
google-cloud-storage = "0.15.0"
time = "0.3.31"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"